--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,16 +1,16 @@
 [package]
-name = "basecamp11"
+name = "sn_workshop"
 version = "0.1.0"
 edition = "2024_07"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-openzeppelin_access = "0.20.0"
+openzeppelin_access = "0.19.0"
 starknet = "2.9.1"
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
+snforge_std = "0.34.0"
 assert_macros = "2.9.1"
 
 [[target.starknet-contract]]
